# mtp-profiler

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  results-sharing.md
mtp_profiler/analyzer/: analyzer.py
mtp_profiler/cli/: __init__.py  cli.py
mtp_profiler/models/: schemas.py
mtp_profiler/parser/: log_parser.py
mtp_profiler/recommender/: recommender.py
mtp_profiler/system_info/: system_info.py
mtp_profiler/visualizer/: visualizer.py
tests/: fixtures.py  test_analyzer.py  test_parser.py  test_recommender.py  test_system_info.py
